# lab6

./: CMakeLists.txt  vec.cpp  vec.h  vec_test.cpp
